# rust-e-book

./: .env  Cargo.toml  README.md  er_diagram.md
db/: rust-e-book.db
migrations/2023-03-13-131702_create_tables/: down.sql  up.sql
src/: chapter.rs  chapters.rs  course.rs  courses.rs  exam.rs  exam__history.rs  exam_history.rs  history.rs  historys.rs  main.rs  mentor.rs  question.rs  question_history.rs  schema.rs  student.rs  students.rs
templates/: index.html.tera  index_number.html.tera  login.html.tera  not_complete_courses.html.tera
templates/course/: show.html.tera
templates/exam/: show.html.tera
templates/mentor/: index.html.tera
uml/: class.uxf  usecase.uxf
